[package]
name = "house-buyer"
version = "0.1.0"
authors = ["mlbright"]
edition = "2018"

[dependencies]
rust_decimal_macros = "1.10.3"
rust_decimal = "1.10.3"
structopt = "0.3.21"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.canadian_mortgage]
git = "ssh://git@github.com/mlbright/canadian-mortgage"
branch = "main"
