[package]
name = "house-buyer"
version = "0.1.0"
authors = ["mlbright"]
edition = "2018"

[dependencies]
rust_decimal_macros = "1.10.3"
rust_decimal = "1.10.3"
structopt = "0.3.21"
tera = "1.6.1"
anyhow = "1.0.38"

[dependencies.canadian_mortgage]
git = "ssh://git@github.com/mlbright/canadian-mortgage"
branch = "main"

[dependencies.toronto_land_transfer_tax]
git = "ssh://git@github.com/mlbright/toronto-land-transfer-tax"
branch = "main"
